Allow the creation of a type0 font where the substitute font is provided. This is to cover the case where the font is not embedded and a substitute is selected externally by some mean, and provided to the constructor